# timepal

./: README.md  pyproject.toml
src/timepal/: __main__.py  util.py
